# codewars-local

./: .gitignore  CMakeLists.txt  README.md  solution.h  tests.cpp
battle/: CMakeLists.txt  kata.h  main.cpp
